# mcp-webpublication-server

./: .env.example  Cargo.toml  README.md
src/: main.rs  models.rs  service.rs
